<?xml version="1.0" encoding="utf-8"?><!-- sign up here -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/launchericon"
        android:contentDescription="@string/launchericon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <!-- enter username for sign up -->
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/username"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:ignore="Autofill" /><!-- autofill is only supported for oreo -->
            <!-- enter password for sign up -->
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:ignore="Autofill" /><!-- autofill is only supported for oreo -->
            <!-- repeat password for sign up -->
            <EditText
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/confirm_password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:ignore="Autofill" /><!-- autofill is only supported for oreo -->
            <!-- spinner to select team -->
            <Spinner
                android:id="@+id/team_spinner"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:spinnerMode="dropdown"/>
            <!-- sign up -->
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"/>
            <!-- go back to login page-->
            <TextView
                android:id="@+id/log_in_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    <!-- shows progress of signing up -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

</LinearLayout>